junit5 og codecleanup (#1488)